--- a/public/index.html
+++ b/public/index.html
@@ -94,12 +94,12 @@
               <div class="row">
                 <div class="col-md-6">
                   <h2 class="heading">About me</h2>
-                  <!--<p class="lead">This can be an about section or anything else ;)</p>-->
                   <p>I am currently pursuing my Master of Science in Computer Science at Northeastern University.</p>
                   <p>I believe in idea of how a small piece of code makes our life easier. I love coding as well as data analysis.</p>
+                  <a href="https://drive.google.com/open?id=0Bzg5J2f2XdnDZGF6QzV2d0dUY3c">Click here for my Resume</a>
                 </div>
                 <div class="col-md-5 col-md-offset-1">
-                  <p><img src="landingPage/img/me1.jpg" alt="" class="img-responsive img-circle"></p>
+                  <p><img src="landingPage/img/me2.JPG" alt="" class="img-responsive img-circle"></p>
                 </div>
               </div>
             </div>
